# on-device-agents

./: .env-sample  .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  run_programmatically.py  run_tiny_agent_server.py
llm_configs/: config_mistral.json  config_openai.json
src/tiny_agent/: models.py
